--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-sass": "^5.1.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "nuxt": "^2.15.8",
     "v-click-outside": "^3.1.2",
     "vue": "^2.6.14",
